# lecture-games

./: CLAUDE.md  Cargo.toml  README.md
src/: main.rs  mod.rs  storage.rs  ui.rs
src/controllers/: app_controller.rs  mod.rs
src/games/: inumbs.rs  mod.rs  reading_speed.rs  text_comprehension.rs  word_memory.rs
src/models/: game_config.rs  game_result.rs  game_types.rs  mod.rs  storage.rs
src/utils/: mod.rs  time_format.rs
src/views/: components.rs  game_view.rs  history_view.rs  menu_view.rs  mod.rs  results_view.rs
