[package]
name = "lecture_games"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Storage",
]

[[bin]]
name = "superlectura_games"
path = "src/main.rs"